# sample-api-people-network

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  data.yml  docker-compose.yml  pyproject.toml  tox.ini
.tools-cfg/: .coveragerc  .isort.cfg  bandit-functional.yaml  bandit-unit.yaml  black-cfg.toml  bumpversion.cfg  mypy.ini  pylintrc  pylintrc-test  towncrier.toml
app/: __init__.py  __main__.py  main.py
app/api/: dependencies.py  exceptions_handler.py
app/api/api_v0/: api.py  util_functions.py
app/api/api_v0/endpoints/: people.py  people_relationship.py
app/api/api_v0/models/: __init__.py  common.py  person.py
app/core/: db_connection.py  environment.py  log_configuration.py
app/core/log_config/: base_log_config.json
app/dao/people/: constructors.py  cypher_queries.py  interface.py
app/dp/: connection.py  init_db.py  load_csv_to_neo4j.py
app/dp/data/: property_fluid_expanded.csv  property_sensor_type_expanded.csv  table_conversion_operands.csv  table_conversions_no_operands.csv  table_of_fluid_type.csv  table_of_properties.csv  table_of_units.csv  table_properties_fluid_type_expanded.csv  table_sample_observations.csv  table_senor_type_list.csv  table_unit_properties_expanded.csv
app/errors/: app_errors.py
app/models/: common.py  peoples.py
app/testing/: neo4j_client_mock.py  people.py  utils_functions.py
tests/: pytest.ini  test_sanity.py
tests/integration/: conftest.py  test_people.py
tests/unit/: conftest.py
tests/unit/people/: test_crud_api.py  test_db_interface.py  test_people_relationship.py
(+4 files in other folders)
